--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,42 +22,41 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.android.support:support-v4:25.3.1'
+    compile 'com.android.support:recyclerview-v7:25.0.0'
+    compile 'com.android.support:multidex:1.0.1'
+    //glide
     compile 'com.github.bumptech.glide:glide:3.7.0'
-
+    //googlesample的权限管理
     compile 'pub.devrel:easypermissions:1.0.0'
-
     compile 'com.jakewharton:butterknife:8.4.0'
     apt 'com.jakewharton:butterknife-compiler:8.4.0'
-
+    //rxjava及附带的rxandroi包
     compile 'io.reactivex:rxandroid:1.2.1'
     compile 'io.reactivex:rxjava:1.1.6'
-
+    //rxlifecycle
     compile 'com.trello:rxlifecycle:1.0'
     compile 'com.trello:rxlifecycle-android:1.0'
     compile 'com.trello:rxlifecycle-components:1.0'
-
+    //retrofit2
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
-
+    //okhttp client
     compile 'com.squareup.okhttp3:okhttp:3.5.0'
     compile 'com.squareup.okhttp3:logging-interceptor:3.5.0'
-
+    //gson
     compile 'com.google.code.gson:gson:2.8.0'
-
-    compile 'org.greenrobot:greendao:3.2.0'//GreenDao
+    //GreenDao
+    compile 'org.greenrobot:greendao:3.2.0'
     compile 'org.greenrobot:greendao-generator:3.0.0'
-
+    //logger
     compile 'com.orhanobut:logger:2.1.1'
-
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support:support-v4:25.3.1'
-
+    //
     compile 'com.readystatesoftware.systembartint:systembartint:1.0.3'
-
-    compile 'com.android.support:multidex:1.0.1'
-
+    //eventbus
     compile 'org.greenrobot:eventbus:3.0.0'
+
 }
